--- a/SomeWhat/packages.config
+++ b/SomeWhat/packages.config
@@ -5,5 +5,6 @@
   <package id="Microsoft.Azure.Mobile.Analytics" version="0.5.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Microsoft.Azure.Mobile.Crashes" version="0.5.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xamarin.Forms" version="2.3.3.180" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
