--- a/SomeWhat/SommeWhat.csproj
+++ b/SomeWhat/SommeWhat.csproj
@@ -39,7 +39,8 @@
     </Compile>
     <Compile Include="Models\Wine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\StubWineService.cs" />
+    <Compile Include="Services\IWineService.cs" />
+    <Compile Include="Services\Impl\StubWineService.cs" />
     <Compile Include="Utils\Cloner.cs" />
     <Compile Include="Views\RootPage.xaml.cs">
       <DependentUpon>RootPage.xaml</DependentUpon>
