Add icon for adding new items

--- a/iOS/SommeWhat.iOS.csproj
+++ b/iOS/SommeWhat.iOS.csproj
@@ -167,6 +167,15 @@
     <ImageAsset Include="Assets.xcassets\DefaultWine.imageset\GMcGlinn-red-wine-glass.png">
       <InProject>false</InProject>
     </ImageAsset>
+    <ImageAsset Include="Resources\Assets.xcassets\AddNew.imageset\Add-New.pdf">
+      <InProject>false</InProject>
+    </ImageAsset>
+    <ImageAsset Include="Resources\Assets.xcassets\AddNew.imageset\Contents.json">
+      <InProject>false</InProject>
+    </ImageAsset>
+    <ImageAsset Include="Resources\Assets.xcassets\AppIcons.appiconset\Contents.json">
+      <InProject>false</InProject>
+    </ImageAsset>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
