--- a/iOS/SommeWhat.iOS.csproj
+++ b/iOS/SommeWhat.iOS.csproj
@@ -167,7 +167,7 @@
     <ImageAsset Include="Assets.xcassets\DefaultWine.imageset\GMcGlinn-red-wine-glass.png">
       <InProject>false</InProject>
     </ImageAsset>
-    <ImageAsset Include="Resources\Assets.xcassets\AddNew.imageset\Add-New.pdf">
+    <ImageAsset Include="Resources\Assets.xcassets\AddNew.imageset\AddNew.pdf">
       <InProject>false</InProject>
     </ImageAsset>
     <ImageAsset Include="Resources\Assets.xcassets\AddNew.imageset\Contents.json">
